libmate-desktop/mate-desktop-thumbnail.c
@@ -1508,7 +1508,6 @@ mate_desktop_thumbnail_factory_create_failed_thumbnail (MateDesktopThumbnailFact
   char *tmp_path;
   int tmp_fd;
   gchar *mtime_str;
-  gboolean saved_ok;
   GdkPixbuf *pixbuf;
   GChecksum *checksum;
   guint8 digest[16];
@@ -1552,20 +1551,17 @@ mate_desktop_thumbnail_factory_create_failed_thumbnail (MateDesktopThumbnailFact
   
   mtime_str = g_strdup_printf ("%" G_GINT64_FORMAT,  (gint64)mtime);
   pixbuf = gdk_pixbuf_new (GDK_COLORSPACE_RGB, TRUE, 8, 1, 1);
-  saved_ok  = gdk_pixbuf_save (pixbuf,
-			       tmp_path,
-			       "png", NULL, 
-			       "tEXt::Thumb::URI", uri,
-			       "tEXt::Thumb::MTime", mtime_str,
-			       "tEXt::Software", "MATE::ThumbnailFactory",
-			       NULL);
+  gdk_pixbuf_save (pixbuf,
+                   tmp_path,
+                   "png", NULL,
+                   "tEXt::Thumb::URI", uri,
+                   "tEXt::Thumb::MTime", mtime_str,
+                   "tEXt::Software", "MATE::ThumbnailFactory",
+                   NULL);
   g_object_unref (pixbuf);
   g_free (mtime_str);
-  if (saved_ok)
-    {
-      g_chmod (tmp_path, 0600);
-      g_rename(tmp_path, path);
-    }
+  g_chmod (tmp_path, 0600);
+  g_rename (tmp_path, path);
 
   g_free (path);
   g_free (tmp_path);
